Update product-template to show delivery information base on product tags

--- a/themes/Debut/sections/custom-content.liquid
+++ b/themes/Debut/sections/custom-content.liquid
@@ -445,7 +445,7 @@
           },
           "default": {
             "da": "Fortæl om dit brand",
-            "de": "Erzählen Sie von Ihrer Marke",
+            "de": "Erzähle von deiner Marke",
             "en": "Talk about your brand",
             "es": "Habla de tu marca",
             "fi": "Kerro brändistäsi",
@@ -2912,7 +2912,7 @@
           "type": "richtext",
           "default": {
             "da": "<p>Beskrivelse af din blog.</p>",
-            "de": "<p>Beschreibung Ihres Blogs.</p>",
+            "de": "<p>Beschreibung deines Blogs.</p>",
             "en": "<p>Description of your blog.</p>",
             "es": "<p>Descripción de tu blog.</p>",
             "fi": "<p> Blogisi kuvaus. </p>",
