--- a/themes/Debut/sections/footer.liquid
+++ b/themes/Debut/sections/footer.liquid
@@ -516,7 +516,7 @@
       },
       "info": {
         "da": "Du kan tilføje et sprog ved at gå til dine [sprogindstillinger.](/admin/settings/languages)",
-        "de": "Gehen Sie zu Ihren [Spracheinstellungen](/admin/settings/languages), um eine Sprache hinzuzufügen.",
+        "de": "Gehe zu deinen [Spracheinstellungen](/admin/settings/languages), um eine Sprache hinzuzufügen.",
         "en": "To add a language, go to your [language settings.](/admin/settings/languages)",
         "es": "Para agregar un idioma, ve a tu[configuración de idioma](/admin/settings/languages)",
         "fi": "Lisää kieli siirtymällä [kieliasetuksiin.](/admin/settings/languages)",
@@ -584,7 +584,7 @@
       },
       "info": {
         "da": "Du kan tilføje en valuta ved at gå til dine [betalingsindstillinger.](/admin/settings/payments)",
-        "de": "Gehen Sie zu Ihren [Zahlungseinstellungen](/admin/settings/payments), um eine Währung hinzuzufügen.",
+        "de": "Gehe zu deinen [Zahlungseinstellungen](/admin/settings/payments), um eine Währung hinzuzufügen.",
         "en": "To add a currency, go to your [payment settings.](/admin/settings/payments)",
         "es": "Para agregar una moneda, ve a tu [configuración de pago.](/admin/settings/payments)",
         "fi": "Lisää valuutta siirtymällä [maksuasetuksiisi.](/admin/settings/payments)",
@@ -772,7 +772,7 @@
           },
           "default": {
             "da": "Fortæl om din virksomhed",
-            "de": "Reden Sie über Ihr Unternehmen",
+            "de": "Rede über dein Unternehmen",
             "en": "Talk about your business",
             "es": "Habla sobre tu negocio",
             "fi": "Kerro yrityksestäsi",
@@ -816,7 +816,7 @@
           },
           "default": {
             "da": "<p>Del butiksoplysninger, reklamer eller brandindhold med dine kunder.</p>",
-            "de": "<p>Teilen Sie Ihre Shop-Details, Werbeaktionen oder Markeninhalte mit Ihren Kunden.</p>",
+            "de": "<p>Teile deine Shop-Details, Werbeaktionen oder Markeninhalte mit deinen Kunden.</p>",
             "en": "<p>Share store details, promotions, or brand content with your customers.</p>",
             "es": "<p>Comparte detalles de la tienda, promociones o contenido de la marca con tus clientes.</p>",
             "fi": "<p>Jaa myymälän tiedot, tarjoukset tai brändin sisältö asiakkaittesi kanssa.</p>",
@@ -886,7 +886,7 @@
           },
           "info": {
             "da": "Abonnenter bliver føjet til [kundelisten](/admin/customers?query=&accepts_marketing=1) for \"accepterer markedsføring\".",
-            "de": "Abonnenten werden zu Ihrer Liste „akzeptiert Marketingmaterial“ hinzugefügt [Kundenliste.](/admin/customers?query=&accepts_marketing=1)",
+            "de": "Abonnenten werden zu deiner Liste „akzeptiert Marketingmaterial“ hinzugefügt [Kundenliste.](/admin/customers?query=&accepts_marketing=1)",
             "en": "Subscribers will be added to your “accepts marketing” [customer list.](/admin/customers?query=&accepts_marketing=1)",
             "es": "Se añadirá los suscriptores a tu [lista de clientes.](/admin/customers?query=&accepts_marketing=1) \"acepta marketing\".",
             "fi": "Tilaajat lisätään \"hyväksyy markkinointi\" [-asiakasluetteloosi. ](/admin/customers?query=&accepts_marketing=1)",
