--- a/themes/Debut/sections/password-content.liquid
+++ b/themes/Debut/sections/password-content.liquid
@@ -134,7 +134,7 @@
       },
       "default": {
         "da": "Vær blandt de første til at få besked ved lancering.",
-        "de": "Seien Sie der Erste, der von unserem Launch erfährt.",
+        "de": "Sei der Erste, der von unserem Launch erfährt.",
         "en": "Be the first to know when we launch.",
         "es": "Entérate de nuestros lanzamientos antes que los demás.",
         "fi": "Saa tieto julkistuksistamme ensimmäisenä",
@@ -266,7 +266,7 @@
       },
       "default": {
         "da": "Giv mig besked",
-        "de": "Sagen Sie mir Bescheid",
+        "de": "Sag mir Bescheid",
         "en": "Notify me",
         "es": "Notificarme",
         "fi": "Ilmoita minulle",
