--- a/themes/Debut/sections/password-footer.liquid
+++ b/themes/Debut/sections/password-footer.liquid
@@ -85,7 +85,7 @@
       },
       "default": {
         "da": "Spred budskabet",
-        "de": "Machen Sie Werbung",
+        "de": "Mach Werbung",
         "en": "Spread the word",
         "es": "Riega la voz",
         "fi": "Levitä sanaa",
