--- a/themes/Debut/sections/product-recommendations.liquid
+++ b/themes/Debut/sections/product-recommendations.liquid
@@ -114,7 +114,7 @@
       },
       "default": {
         "da": "Du vil muligvis også synes om",
-        "de": "Das könnte Ihnen auch gefallen",
+        "de": "Das könnte dir auch gefallen",
         "en": "You may also like",
         "es": "También te puede interesar",
         "fi": "Saatat pitää myös näistä",
