--- a/themes/Debut/sections/rich-text.liquid
+++ b/themes/Debut/sections/rich-text.liquid
@@ -88,7 +88,7 @@
       },
       "default": {
         "da": "Fortæl om dit brand",
-        "de": "Reden Sie über Ihre Marke",
+        "de": "Rede über deine Marke",
         "en": "Talk about your brand",
         "es": "Habla de tu marca",
         "fi": "Kerro brändistäsi",
