--- a/themes/Debut/layout/theme.liquid
+++ b/themes/Debut/layout/theme.liquid
@@ -40,6 +40,7 @@
   {% include 'social-meta-tags' %}
 
   {{ 'theme.scss.css' | asset_url | stylesheet_tag }}
+  {{ 'fast-delivery.scss.css' | asset_url | stylesheet_tag }}
 
   <script>
     var theme = {
