--- a/storefront/anvy-shop/src/app/product/product.component.html
+++ b/storefront/anvy-shop/src/app/product/product.component.html
@@ -1,1 +1,17 @@
-<p>product works!</p>
+<div class="container">
+  <div class="introduce">
+    <h2>{{'All our products' | uppercase}}</h2>
+  </div>
+  <div class="product-container">
+    <div class="product" *ngFor="let item of products">
+      <div class="avatar">
+        <img [src]="item.images[0]?.src" [alt]="item.name">
+      </div>
+      <div class="info">
+        <h3 class="product-name">{{item.name}}</h3>
+        <p class="price">{{item.price | currency}}</p>
+        <div [innerHTML]="item.description"></div>
+      </div>
+    </div>
+  </div>
+</div>
