--- a/storefront/anvy-shop/src/app/home/home.component.scss
+++ b/storefront/anvy-shop/src/app/home/home.component.scss
@@ -1,4 +1,9 @@
-.logo-size {
-  width: auto;
-  height: 5em;
+.item {
+
+  img {
+    height: 100%;
+    width: auto;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
