--- a/storefront/anvy-shop/src/app/home/home.component.scss
+++ b/storefront/anvy-shop/src/app/home/home.component.scss
@@ -1,3 +1,5 @@
+@import "~assets/_common";
+
 .owl-carousel {
   position: absolute;
   height: calc(100% - 56px);
@@ -10,13 +12,20 @@
   .desc-wrapper {
     padding: 2rem;
     position: absolute;
-    top: 50%;
-    left: 3rem;
-    width: 25%;
+    top: 10%;
+    left: 50%;
+    width: 80%;
     height: 17.4rem;
 
-    transform: translateY(-50%);
     background-color: #ffe4c4;
+    transform: translateX(-50%);
+
+    @include media-laptop {
+      top: 50%;
+      left: 3rem;
+      width: 25%;
+      transform: translate(0, -50%);
+    }
   }
   .desc {
     height: 100%;
