--- a/storefront/anvy-shop/src/app/product/product.component.html
+++ b/storefront/anvy-shop/src/app/product/product.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="isLoaded; else isLoading">
   <div class="introduce">
     <h2>{{'All our products' | uppercase}}</h2>
     <p class="total">Total {{total}} products</p>
@@ -12,10 +12,13 @@
         <h3 class="product-name">{{item.name}}</h3>
         <p class="price">{{item.price | currency}}</p>
         <div class="checkout-container">
-          <button class="btn btn-outline-primary" (click)="onAddToCart(item)">Add to Cart</button>
+          <button class="btn btn-outline-primary btn-lg btn-block" (click)="onAddToCart(item)">Add to Cart</button>
         </div>
         <div [innerHTML]="item.description"></div>
       </div>
     </div>
   </div>
 </div>
+<ng-template #isLoading>
+  <p>Loading...</p>
+</ng-template>
