--- a/storefront/anvy-shop/src/app/navbar/navbar.component.html
+++ b/storefront/anvy-shop/src/app/navbar/navbar.component.html
@@ -10,9 +10,11 @@
       </li>
     </ul>
   </div>
-  <div class="cart-holder" (click)="goCheckout()">
-    <img src="assets/icons/cart2.svg" alt="" width="32" height="32" aria-hidden="true" focusable="false" role="img">
-    <span class="badge badge-light">{{totalCheckoutItem | checkoutBadge}}</span>
+  <div class="cart-container">
+    <div class="cart-holder" (click)="goCheckout()">
+      <img src="assets/icons/cart2.svg" alt="" width="32" height="32" aria-hidden="true" focusable="false" role="img">
+      <span class="badge badge-light">{{totalCheckoutItem | checkoutBadge}}</span>
+    </div>
   </div>
 </nav>
 
