--- a/storefront/anvy-shop/src/styles.scss
+++ b/storefront/anvy-shop/src/styles.scss
@@ -1,3 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import "assets/common";
 @import "node_modules/bootstrap/scss/bootstrap";
+
+.btn {
+  cursor: pointer;
+}
+
+main {
+  padding-top: 4.5rem;
+}
